Closed Bug 1314535 Opened 9 years ago Closed 9 years ago

MDSM::mediaSeekable should be updated by the reader instead of MediaDecoder

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(2 files)

MDSM should listen to MediaDecoderReader::OnMediaNotSeekable() without going through MediaDecoder.
Assignee: nobody → jwwang
Blocks: 1286129
Priority: -- → P3
Attachment #8807016 - Flags: review?(jyavenard)
Attachment #8807017 - Flags: review?(jyavenard)
Comment on attachment 8807016 [details] Bug 1314535. Part 1 - listen to MediaDecoderReader::OnMediaNotSeekable() to update mMediaSeekable. https://reviewboard.mozilla.org/r/90282/#review90570 ::: dom/media/MediaDecoderStateMachine.cpp:2188 (Diff revision 1) > mVideoQueueListener = VideoQueue().PopEvent().Connect( > mTaskQueue, this, &MediaDecoderStateMachine::OnVideoPopped); > > mMetadataManager.Connect(mReader->TimedMetadataEvent(), OwnerThread()); > > + mOnMediaNotSeekable = mReader->OnMediaNotSeekable().Connect( It feels weird to have the initialization done in one class while the disconnection occurs in another...
Attachment #8807016 - Flags: review?(jyavenard) → review+
Attachment #8807017 - Flags: review?(jyavenard) → review+
Comment on attachment 8807016 [details] Bug 1314535. Part 1 - listen to MediaDecoderReader::OnMediaNotSeekable() to update mMediaSeekable. https://reviewboard.mozilla.org/r/90282/#review90570 > It feels weird to have the initialization done in one class while the disconnection occurs in another... MDSM serves as a context object for the underlying state objects. There are some variables shared across the state objects which are written in one state and read in another.
Thanks for the review!
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f1116434cbf0 Part 1 - listen to MediaDecoderReader::OnMediaNotSeekable() to update mMediaSeekable. r=jya https://hg.mozilla.org/integration/autoland/rev/38bae57379ad Part 2 - remove unused canonical. r=jya
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: