Bug 1314535. Part 1 - listen to MediaDecoderReader::OnMediaNotSeekable() to update mMediaSeekable. r=jya

MozReview-Commit-ID: JK0qnMoljyp